kubernetes/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    env: prod
    app: ks8-django
spec:
  selector:
    matchLabels:
      project: django
  template:
    metadata:
      labels:
        project: django
    spec:
      containers:
        - name: django
          image: django_app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
apiVersion: batch/v1
kind: Job
metadata:
  name: django-migrate
spec:
  ttlSecondsAfterFinished: 100
  template:
    spec:
      containers:
        - name: django-migrate
          image: django_app
          imagePullPolicy: IfNotPresent
          command: ["python", "manage.py", "migrate", "--no-input"]
          ports:
            - containerPort: 80
      restartPolicy: OnFailure

apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
    type: LoadBalancer
    selector:
        project: django
    ports:
      - name: django-port
        protocol: TCP
        port: 80
        targetPort: 80
        nodePort: 30000
